# Esercitazione_5_STL

./: .gitignore
Exercise2/: CMakeLists.txt  README.md  main.cpp
Exercise2/ExportParaview/: CMakeLists.txt  UCDUtilities.hpp
Exercise2/src/: PolygonalMesh.hpp  Utils.cpp  Utils.hpp
